cppcheck/198439_report.txt
vm.c:1770:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1780:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1790:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1:1: portability: Omitted return type of function 'mrb_vm_exec' defaults to int, this is not supported by ISO C99 and later standards. [returnImplicitInt]
mrb_vm_exec(mrb_state *mrb, const struct RProc *proc, const mrb_code *pc)
^
vm.c:2:1: information: Limiting ValueFlow analysis in function 'mrb_vm_exec' since it is too complex. Please specify --check-level=exhaustive to perform full analysis. [checkLevelNormal]
{
^
vm.c:37:3: error: Address of local auto-variable assigned to a function parameter. [autoVariables]
  mrb->jmp = &c_jmp;
  ^
vm.c:1748:7: warning: %d in format string (no. 1) requires 'int' but the argument type is 'unsigned int'. [invalidPrintfArgType_sint]
      printf("OP_DEBUG %d %d %d\n", a, b, c);
      ^
vm.c:426:10: style: Redundant initialization for 'ci'. The initialized value is overwritten before it is read. [redundantInitialization]
      ci = cipush(mrb, a, 0, cls, NULL, mid, c);
         ^
vm.c:410:24: note: ci is initialized
      mrb_callinfo *ci = mrb->c->ci;
                       ^
vm.c:426:10: note: ci is overwritten
      ci = cipush(mrb, a, 0, cls, NULL, mid, c);
         ^
vm.c:1143:14: style: Variable 'proc' is reassigned a value before the old one has been used. [redundantAssignment]
        proc = ci->proc;
             ^
vm.c:985:18: note: proc is assigned
            proc = ci->proc;
                 ^
vm.c:1143:14: note: proc is overwritten
        proc = ci->proc;
             ^
vm.c:96:5: style: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_LOADI_0,B) goto L_LOADI;
    ^
vm.c:391:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_SSENDB, BBB) {
    ^
vm.c:396:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_SEND, BBB)
    ^
vm.c:405:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_SENDB, BBB)
    ^
vm.c:1236:5: style: inconclusive: Statements following 'goto' will never be executed. [unreachableCode]
    CASE(OP_ADD, B) {
    ^
vm.c:1241:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATH(sub);
      ^
vm.c:1245:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATH(mul);
      ^
vm.c:1484:16: style: The scope of the variable 'idx' can be reduced. [variableScope]
      int len, idx;
               ^
vm.c:1640:30: style: The scope of the variable 'baseclass' can be reduced. [variableScope]
      struct RClass *c = 0, *baseclass;
                             ^
vm.c:1658:32: style: The scope of the variable 'baseclass' can be reduced. [variableScope]
      struct RClass *cls = 0, *baseclass;
                               ^
vm.c:308:22: style: Unsigned expression 'a' can't be negative so it is unnecessary to test it. [unsignedPositive]
        mrb_assert(a >= 0 && a < irep->ilen);
                     ^
vm.c:926:9: style: Label 'L_CATCH_TAGGED_BREAK' is not used. There is #if in function body so the label might be used in code that is removed by the preprocessor. [unusedLabelConfiguration]
        L_CATCH_TAGGED_BREAK: /* from THROW_TAGGED_BREAK() or UNWIND_ENSURE() */
        ^
vm.c:359:21: style: Local variable 'exc' shadows outer variable [shadowVariable]
          mrb_value exc;
                    ^
vm.c:349:17: note: Shadowed declaration
      mrb_value exc = regs[a];  /* exc on stack */
                ^
vm.c:359:21: note: Shadow variable
          mrb_value exc;
                    ^
vm.c:534:15: style: Local variable 'mid' shadows outer variable [shadowVariable]
      mrb_sym mid = ci->mid;
              ^
vm.c:14:11: note: Shadowed declaration
  mrb_sym mid;
          ^
vm.c:534:15: note: Shadow variable
      mrb_sym mid = ci->mid;
              ^
vm.c:912:37: style: Local variable 'c' shadows outer variable [shadowVariable]
                struct mrb_context *c = mrb->c;
                                    ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:912:37: note: Shadow variable
                struct mrb_context *c = mrb->c;
                                    ^
vm.c:993:33: style: Local variable 'c' shadows outer variable [shadowVariable]
            struct mrb_context *c;
                                ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:993:33: note: Shadow variable
            struct mrb_context *c;
                                ^
vm.c:1064:33: style: Local variable 'c' shadows outer variable [shadowVariable]
            struct mrb_context *c = mrb->c;
                                ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:1064:33: note: Shadow variable
            struct mrb_context *c = mrb->c;
                                ^
vm.c:1257:19: style: Local variable 'x' shadows outer variable [shadowVariable]
          mrb_int x = mrb_integer(regs[a]);
                  ^
vm.c:1250:17: note: Shadowed declaration
      mrb_float x, y, f;
                ^
vm.c:1257:19: note: Shadow variable
          mrb_int x = mrb_integer(regs[a]);
                  ^
vm.c:1258:19: style: Local variable 'y' shadows outer variable [shadowVariable]
          mrb_int y = mrb_integer(regs[a+1]);
                  ^
vm.c:1250:20: note: Shadowed declaration
      mrb_float x, y, f;
                   ^
vm.c:1258:19: note: Shadow variable
          mrb_int y = mrb_integer(regs[a+1]);
                  ^
vm.c:1640:22: style: Local variable 'c' shadows outer variable [shadowVariable]
      struct RClass *c = 0, *baseclass;
                     ^
vm.c:13:12: note: Shadowed declaration
  uint16_t c;
           ^
vm.c:1640:22: note: Shadow variable
      struct RClass *c = 0, *baseclass;
                     ^
vm.c:1703:15: style: Local variable 'mid' shadows outer variable [shadowVariable]
      mrb_sym mid = syms[b];
              ^
vm.c:14:11: note: Shadowed declaration
  mrb_sym mid;
          ^
vm.c:1703:15: note: Shadow variable
      mrb_sym mid = syms[b];
              ^
vm.c:1787:15: style: Local variable 'insn' shadows outer variable [shadowVariable]
      uint8_t insn = READ_B();
              ^
vm.c:7:12: note: Shadowed declaration
  mrb_code insn;
           ^
vm.c:1787:15: note: Shadow variable
      uint8_t insn = READ_B();
              ^
vm.c:265:20: style: Variable 'regs_a' can be declared as pointer to const [constVariablePointer]
        mrb_value *regs_a = regs + a;
                   ^
vm.c:695:25: style: Variable 'argv0' can be declared as pointer to const [constVariablePointer]
      mrb_value * const argv0 = argv;
                        ^
vm.c:948:27: style: Variable 'cibase' can be declared as pointer to const [constVariablePointer]
            mrb_callinfo *cibase;
                          ^
vm.c:1049:26: style: Variable 'e' can be declared as pointer to const [constVariablePointer]
            struct REnv *e = MRB_PROC_ENV(proc);
                         ^
vm.c:1819:19: style: Variable 'ci' can be declared as pointer to const [constVariablePointer]
    mrb_callinfo *ci = mrb->c->ci;
                  ^
vm.c:20:0: information: Include file: "mruby/ops.h" not found. [missingInclude]
#include "mruby/ops.h"
^
vm.c:1237:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATH(add);
      ^
vm.c:1323:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATHI(add);
      ^
vm.c:1327:7: style: Statements following 'break' will never be executed. [unreachableCode]
      OP_MATHI(sub);
      ^
vm.c:1753:7: style: inconclusive: Statements following noreturn function 'abort()' will never be executed. [unreachableCode]
      NEXT;
      ^
vm.c:1:0: style: The function 'mrb_vm_exec' is never used. [unusedFunction]
mrb_vm_exec(mrb_state *mrb, const struct RProc *proc, const mrb_code *pc)
^
nofile:0:0: information: Active checkers: 113/592 (use --checkers-report=<filename> to see details) [checkersReport]

